--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ libc = "0.2.139"
 log = "0.4"
 libseccomp-sys = "0.2"
 clap = { version = "4", features = ["derive"] }
+postcard = { version = "1.0", features = ["use-std"] }
 serde = { version = "1.0", features = ["derive"] }
 vhost-user-backend = "0.14.0"
 vhost = "0.11.0"
