VSOCK: Initial communication support
- Toy echo implementation to receive messages over vsock
- Remove seccomp entirely as it affects sockets

Signed-off-by: Harshavardhan Unnibhavi <harshanavkis@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ vm-memory = { version = "0.14.1", features = ["backend-mmap", "backend-atomic"] 
 virtio-queue = "0.12.0"
 vmm-sys-util = "0.12.1"
 syslog = "6.1"
+vsock = "0.5.1"
 
 [profile.release]
 lto = true
